# HPC

./: README.md
Circuit/: CMakeLists.txt  COPY.txt  README.md  circuit.c  data.txt  mpi_circuit_1.c  mpi_circuit_2.c  mpi_circuit_3.c  mpi_template.c  plotting_command.txt
Matrix/: CMakeLists.txt  matrix.c
PI/: CMakeLists.txt  README.md  data_circle_in.txt  data_circle_out.txt  plotting.py
PI/src/: mc_1.c  mc_2.c  mc_3.c  mc_4.c  pi_1.c  pi_2.c  pi_3.c  sim_1.c  sim_2.c  sim_3.c
